[package]
name = "react-sys"
version = "0.1.0" # replace version
edition = "2018"
description = "React bindings for rust"
license = "MIT"
authors = [
    "Equal Ma <equalma@outlook.com>",
]
homepage = "https://github.com/frender-rs/react-sys"
repository = "https://github.com/frender-rs/react-sys"
categories = [
    "wasm",
    "api-bindings",
    "gui",
]
keywords = [
    "react",
    "wasm",
    "web",
    "ui",
    "js",
    "bindgen",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
