[package]
name = "react-sys"
version = "1.0.0-alpha.1" # replace version
edition = "2018"
description = "React bindings for rust"
license = "MIT"
authors = [
    "Equal Ma <equalma@outlook.com>",
]
homepage = "https://github.com/frender-rs/react-sys"
repository = "https://github.com/frender-rs/react-sys"
categories = [
    "wasm",
    "api-bindings",
    "gui",
]
keywords = [
    "react",
    "wasm",
    "web",
    "ui",
    "js",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
import-react = []

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
